changes to angular2component

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title><%= htmlWebpackPlugin.options.title %></title>
+  <title> The Complete Angular-2 Guide </title>
 
   <meta name="description" content="<%= htmlWebpackPlugin.options.title %>">
-
+  
   <% if (webpackConfig.htmlElements.headTags) { %>
   <!-- Configured Head Tags  -->
   <%= webpackConfig.htmlElements.headTags %>
